# evmc

./: .bumpversion.cfg  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  Cargo.toml  Doxyfile  README.md  appveyor.yml  circle.yml  go.mod
bindings/go/zvmc/: host.c  host.go  host_test.go  loader.c  zvmc.go  zvmc_test.go
bindings/java/: .gitignore  CMakeLists.txt  Makefile  build.gradle  settings.gradle
bindings/java/c/: evmc-vm.c  host.c  host.h  zvmc-vm.c
bindings/java/java/src/main/java/org/theqrl/evmc/: EvmcLoaderException.java  EvmcVm.java  Host.java  HostContext.java
bindings/java/java/src/main/java/org/theqrl/zvmc/: Host.java  HostContext.java  ZvmcLoaderException.java  ZvmcVm.java
bindings/java/java/src/test/java/org/ethereum/evmc/: EvmcTest.java
bindings/java/java/src/test/java/org/theqrl/evmc/: EvmcTest.java  TestHostContext.java  TestMessage.java
bindings/java/java/src/test/java/org/theqrl/zvmc/: TestHostContext.java  TestMessage.java  ZvmcTest.java
bindings/rust/evmc-declare/: Cargo.toml  README.md
bindings/rust/evmc-declare-tests/: Cargo.toml
bindings/rust/evmc-sys/: Cargo.toml  README.md  evmc.h
bindings/rust/evmc-vm/: Cargo.toml  README.md
bindings/rust/zvmc-declare/: Cargo.toml  README.md
bindings/rust/zvmc-declare-tests/: Cargo.toml
bindings/rust/zvmc-declare-tests/src/: lib.rs
bindings/rust/zvmc-declare/src/: lib.rs
bindings/rust/zvmc-sys/: Cargo.toml  README.md  build.rs  zvmc.h
bindings/rust/zvmc-sys/src/: lib.rs
bindings/rust/zvmc-vm/: Cargo.toml  README.md
bindings/rust/zvmc-vm/src/: container.rs  lib.rs  types.rs
cmake/: Config.cmake.in  ZVMC.cmake
docs/: EVMC.md  Host_Guide.md  VM_Guide.md  VM_Tester.md  ZVMC.md  ZVM_Storage_Change_Status.md  custom.dox
examples/: CMakeLists.txt  example.c  example_host.cpp  example_host.h
examples/example-rust-vm/: Cargo.toml
examples/example-rust-vm/src/: lib.rs
examples/example_precompiles_vm/: CMakeLists.txt  example_precompiles_vm.cpp  example_precompiles_vm.h
examples/example_vm/: CMakeLists.txt  example_vm.cpp  example_vm.h
examples/use_instructions_in_cmake/: CMakeLists.txt  use_instructions_in_cmake.c
examples/use_zvmc_in_cmake/: CMakeLists.txt  use_zvmc_in_cmake.c
include/evmc/: evmc.h  evmc.hpp  hex.hpp  mocked_host.hpp
include/zvmc/: filter_iterator.hpp  helpers.h  hex.hpp  instructions.h  loader.h  mocked_host.hpp  tooling.hpp  utils.h  zvmc.h  zvmc.hpp
lib/: CMakeLists.txt
lib/instructions/: CMakeLists.txt  instruction_metrics.c  instruction_names.c
lib/loader/: CMakeLists.txt  loader.c
lib/mocked_host/: CMakeLists.txt
lib/tooling/: CMakeLists.txt  run.cpp
test/cmake_package/: CMakeLists.txt
test/compilation/: CMakeLists.txt  compilation_test.c  compilation_test.cxx
test/examples/: CMakeLists.txt
test/gomod/: README  use_evmc_test.go  use_zvmc_test.go
test/tools/: CMakeLists.txt
test/unittests/: CMakeLists.txt  cpp_test.cpp  example_vm_test.cpp  filter_iterator_test.cpp  helpers_test.cpp  hex_test.cpp  instructions_test.cpp  loader_mock.h  loader_test.cpp  mocked_host_test.cpp  tooling_test.cpp
test/vmtester/: CMakeLists.txt
tools/: CMakeLists.txt
tools/vmtester/: CMakeLists.txt  tests.cpp  vmtester.cpp  vmtester.hpp
tools/zvmc/: CMakeLists.txt  main.cpp
