# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "evmc-sys"
version = "10.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
# TODO(now.youtrack.cloud/issue/TE-11)
repository = "https://github.com/rgeraldes24/evmc"
description = "Bindings to EVMC (low-level)"
categories = ["external-ffi-bindings"]
edition = "2018"

[build-dependencies]
bindgen = "0.59"
