# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "zvmc-vm"
version = "10.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
# TODO(now.youtrack.cloud/issue/TE-11)
repository = "https://github.com/rgeraldes24/zvmc"
description = "Bindings to ZVMC (VM specific)"
edition = "2018"

[dependencies]
zvmc-sys = { path = "../zvmc-sys", version = "10.1.0" }
